[gd_scene load_steps=13 format=2]

[ext_resource path="res://Images/BG.png" type="Texture" id=1]
[ext_resource path="res://GUI/GameOverScreen.gd" type="Script" id=2]
[ext_resource path="res://UserInterface/Loose_text.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/Bensound - A New Beginning.ogg" type="AudioStream" id=4]
[ext_resource path="res://Images/button4.png" type="Texture" id=6]
[ext_resource path="res://Images/button3.png" type="Texture" id=7]
[ext_resource path="res://Images/button1.png" type="Texture" id=8]
[ext_resource path="res://Images/button2.png" type="Texture" id=9]
[ext_resource path="res://Fonts/Open_Sans/OpenSans-Bold.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=3]
resource_name = "default"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 0.470588 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LooseText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.858824, 0.25098, 0.313726, 0 ), Color( 0.858824, 0.25098, 0.313726, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HBoxContainer2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GameOverScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.470588 )
position = Vector2( 0, -72 )
scale = Vector2( 1.024, 1.024 )
texture = ExtResource( 1 )
centered = false

[node name="LooseText" parent="." instance=ExtResource( 3 )]
modulate = Color( 0.858824, 0.25098, 0.313726, 1 )
margin_left = 349.0
margin_top = 168.0
margin_right = 570.0
margin_bottom = 202.0

[node name="ScoreText" parent="." instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = 164.0
margin_right = 35.0
margin_bottom = 198.0
text = "Your Score : 0"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
modulate = Color( 1, 1, 1, 0.466667 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -318.0
margin_top = -36.0
margin_right = 318.0
margin_bottom = 103.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReplayButton" type="TextureButton" parent="HBoxContainer2"]
margin_right = 316.0
margin_bottom = 139.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 6 )

[node name="Label" type="Label" parent="HBoxContainer2/ReplayButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.5
margin_top = -29.0
margin_right = 78.5
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
text = "REPLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="HBoxContainer2"]
margin_left = 320.0
margin_right = 636.0
margin_bottom = 139.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 6 )

[node name="Label" type="Label" parent="HBoxContainer2/QuitButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.5
margin_top = -29.0
margin_right = 51.5
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
[connection signal="pressed" from="HBoxContainer2/ReplayButton" to="." method="_on_ReplayButton_pressed"]
[connection signal="pressed" from="HBoxContainer2/QuitButton" to="." method="_on_QuitButton_pressed"]
